<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.framedinterface</groupId>
    <artifactId>framedinterface</artifactId>
    <version>1.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <dependencies>
        
    <dependency>
      <groupId>org.deckfour</groupId>
      <artifactId>openxes</artifactId>
      <version>2.16</version>
    </dependency>

    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.9.0</version>
    </dependency>


        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>13</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>13</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>15.0.1</version>
       </dependency>
    <dependency>
        <groupId>org.processmining</groupId>
        <artifactId>ltl2automaton</artifactId>
        <version>1.0.0</version>
        
        
    </dependency>
    <dependency>
        <groupId>com.github.vbmacher</groupId>
        <artifactId>java-cup</artifactId>
        <version>11b</version>
    </dependency>
    <dependency>
        <groupId>org.processmining</groupId>
        <artifactId>datapetrinets</artifactId>
        <version>1.0.0</version>
        
        
    </dependency>
    <dependency>
        <groupId>org.processmining</groupId>
        <artifactId>declareminer</artifactId>
        <version>1.0.0</version>
        
        
    </dependency>
    <dependency>
        <groupId>org.processmining</groupId>
        <artifactId>petrinets</artifactId>
        <version>1.0.0</version>
        
        
    </dependency>
        <dependency>
        <groupId>org.processmining</groupId>
        <artifactId>datapetrinetslgpl</artifactId>
        <version>1.0.0</version>
        
        
    </dependency>
        <dependency>
        <groupId>org.processmining</groupId>
        <artifactId>declareminervisualizer</artifactId>
        <version>1.0.0</version>
        
        
    </dependency>
        <dependency>
        <groupId>org.processmining</groupId>
        <artifactId>prom-framework</artifactId>
        <version>1.0.0</version>
        
        
    </dependency>
        <dependency>
        <groupId>org.processmining</groupId>
        <artifactId>prom-models</artifactId>
        <version>1.0.0</version>
        
        
    </dependency>
            <dependency>
        <groupId>org.processmining</groupId>
        <artifactId>dataexpression</artifactId>
        <version>1.0.0</version>
        
        
    </dependency>

    
    <dependency>
        <groupId>xmlpull</groupId>
        <artifactId>xmlpull</artifactId>
        <version>1.1.3.4d_b4_min</version>
    </dependency>

    
    <dependency>
      <groupId>net.sf.kxml</groupId>
      <artifactId>kxml2</artifactId>
      <version>2.3.0</version>
    </dependency>
    <dependency>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
          <version>33.4.8-jre</version> <!-- or the latest stable version -->
    </dependency>
    <dependency>
        <groupId>org.kordamp.ikonli</groupId>
        <artifactId>ikonli-core</artifactId>
        <version>11.3.4</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-javafx -->
    <dependency>
        <groupId>org.kordamp.ikonli</groupId>
        <artifactId>ikonli-javafx</artifactId>
        <version>11.3.4</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-fontawesome-pack -->
    <dependency>
        <groupId>org.kordamp.ikonli</groupId>
        <artifactId>ikonli-fontawesome-pack</artifactId>
        <version>11.3.4</version>
    </dependency>


    </dependencies>



<repositories>
 <repository>
 <id>deckfour</id>
 <url>https://raw.githubusercontent.com/apromore/ApromoreCore_SupportLibs/master/mvn-repo/</url>
 </repository>
  <repository>
 <id>guava</id>
 <url>http://mvnrepository.com/artifact/com.google.guava/guava/</url>
 </repository>
   <repository>
 <id>ikonlicore</id>
 <url>https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-core</url>
 </repository>
    <repository>
 <id>ikonlifont</id>
 <url>https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-fontawesome-pack</url>
 </repository>
    <repository>
 <id>ikonlijavafx</id>
 <url>https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-javafx</url>
 </repository>

</repositories>



    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.6</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>org.framedinterface.App</mainClass>
                            <options>
                            <option>--add-exports=javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
                            <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>2.5.2</version>
        <executions>
          <execution>
            
            <phase>initialize</phase>
            <goals>
              <goal>install-file</goal>
            </goals>
            <configuration>
            <file>${project.basedir}/src/main/resources/lib/LTL2Automaton.jar</file>
            <groupId>org.processmining</groupId>
            <artifactId>ltl2automaton</artifactId>
            <version>1.0.0</version>
            <packaging>jar</packaging>
            <generatePom>true</generatePom>
            </configuration>
          </execution>
          <execution>
            
          <id>install-dpn</id>
            <phase>initialize</phase>
            <goals>
              <goal>install-file</goal>
            </goals>
            <configuration>
            <file>${project.basedir}/src/main/resources/lib/DataPetriNets.jar</file>
            <groupId>org.processmining</groupId>
            <artifactId>datapetrinets</artifactId>
            <version>1.0.0</version>
            <packaging>jar</packaging>
            <generatePom>true</generatePom>
            </configuration>
          </execution>
          <execution>
            
          <id>install-declmine</id>
            <phase>initialize</phase>
            <goals>
              <goal>install-file</goal>
            </goals>
            <configuration>
            <file>${project.basedir}/src/main/resources/lib/DeclareMiner.jar</file>
            <groupId>org.processmining</groupId>
            <artifactId>declareminer</artifactId>
            <version>1.0.0</version>
            <packaging>jar</packaging>
            <generatePom>true</generatePom>
            </configuration>
          </execution>
			    <execution>
			      
                    <id>install-pn</id>
            <phase>initialize</phase>
            <goals>
              <goal>install-file</goal>
            </goals>
            <configuration>
            <file>${project.basedir}/src/main/resources/lib/PetriNets.jar</file>
            <groupId>org.processmining</groupId>
            <artifactId>petrinets</artifactId>
            <version>1.0.0</version>
            <packaging>jar</packaging>
            <generatePom>true</generatePom>
            </configuration>
          </execution>
          			<execution>
          			  
                    <id>install-dpnlgpl</id>
            <phase>initialize</phase>
            <goals>
              <goal>install-file</goal>
            </goals>
            <configuration>
            <file>${project.basedir}/src/main/resources/lib/DataPetriNetsLGPL.jar</file>
            <groupId>org.processmining</groupId>
            <artifactId>datapetrinetslgpl</artifactId>
            <version>1.0.0</version>
            <packaging>jar</packaging>
            <generatePom>true</generatePom>
            </configuration>
          </execution>
            
          			<execution>
          			  
                    <id>install-dmv</id>
            <phase>initialize</phase>
            <goals>
              <goal>install-file</goal>
            </goals>
            <configuration>
            <file>${project.basedir}/src/main/resources/lib/DeclareMinerVisualizer.jar</file>
            <groupId>org.processmining</groupId>
            <artifactId>declareminervisualizer</artifactId>
            <version>1.0.0</version>
            <packaging>jar</packaging>
            <generatePom>true</generatePom>
            </configuration>
          </execution>
            
          			<execution>
                
                    <id>install-pf</id>
            <phase>initialize</phase>
            <goals>
              <goal>install-file</goal>
            </goals>
            <configuration>
            <file>${project.basedir}/src/main/resources/lib/ProM-Framework.jar</file>
            <groupId>org.processmining</groupId>
            <artifactId>prom-framework</artifactId>
            <version>1.0.0</version>
            <packaging>jar</packaging>
            <generatePom>true</generatePom>
            </configuration>
          </execution>
          			<execution>
          			  
                    <id>install-pm</id>
            <phase>initialize</phase>
            <goals>
              <goal>install-file</goal>
            </goals>
            <configuration>
            <file>${project.basedir}/src/main/resources/lib/ProM-Models.jar</file>
            <groupId>org.processmining</groupId>
            <artifactId>prom-models</artifactId>
            <version>1.0.0</version>
            <packaging>jar</packaging>
            <generatePom>true</generatePom>
            </configuration>
          </execution>
          <execution>

                <id>install-dexpresssion</id>
                <phase>initialize</phase>
                <goals>
                <goal>install-file</goal>
                </goals>
                <configuration>
                <file>${project.basedir}/src/main/resources/lib/DataExpression.jar</file>
                <groupId>org.processmining</groupId>
                <artifactId>dataexpression</artifactId>
                <version>1.0.0</version>
                <packaging>jar</packaging>
                <generatePom>true</generatePom>
                </configuration>
            </execution>
            </executions>
          </plugin>  
        </plugins>
    </build>
</project>
